# aliyundrive-cli

./: .drone.yml  .gitignore  Cargo.toml  LICENSE  README.md  build.sh  docker.sh
.cargo/: config.toml
.github/workflows/: sync.yml
conf/: Cargo.toml
conf/examples/: test.rs
conf/src/: lib.rs  rw.rs
docker/: Dockerfile
drive/: Cargo.toml
drive/examples/: base64.rs  test.rs  token.rs
drive/src/: error.rs  lib.rs
drive/src/login/: mod.rs  qr.rs
drive/src/models/: auth.rs  gen.rs  mod.rs  query.rs  suc.rs
drive/src/scan/: mod.rs  qr.rs
drive/src/scan/model/: gen.rs  query.rs  suc.rs
examples/: cli.rs  dirs.rs  test.rs  time.rs  token.rs
libs/aliyundrive/: Cargo.toml
libs/conf/: Cargo.toml
libs/conf/examples/: test.rs
libs/conf/src/: lib.rs
libs/drive/: Cargo.toml
libs/drive/examples/: base64.rs  err.rs  json.rs  test.rs  token.rs
libs/drive/src/: lib.rs  models.rs  qr.rs
libs/drive/src/login/: qr.rs
libs/drive/src/models/: auth.rs  gen.rs  mod.rs  query.rs  suc.rs
libs/drive/src/scan/: qr.rs
libs/drive/src/scan/model/: auth.rs  suc.rs
libs/drive/src/token/: mod.rs  qr.rs
libs/qrcode/: Cargo.toml
libs/qrcode/examples/: qrcode.rs  qrcode_term.rs
libs/qrcode/src/: lib.rs  render_term.rs
libs/qrcode_term/: Cargo.toml
libs/qrcode_term/examples/: encode.rs  encode_image.rs  encode_string.rs  encode_svg.rs  qrcode_term.rs
libs/qrcode_term/src/: lib.rs  qr.rs
panlib/: Cargo.toml
qrcode/: Cargo.toml
qrcode/src/: lib.rs  types.rs
qrcode/src/render/: svg.rs
src/: conf.rs  handler.rs  main.rs
src/conf/: mod.rs  rw.rs
src/drive/: Cargo.toml  conf.rs  error.rs  mod.rs  model.rs  time.rs
src/drive/examples/: base64.rs
src/drive/login/: mod.rs  qr.rs
src/drive/login/model/: auth.rs  gen.rs  mod.rs  query.rs  suc.rs
src/drive/src/: conf.rs  const.rs  error.rs  lib.rs  model.rs  standard.rs
src/drive/src/conf/: mod.rs  rw.rs
src/drive/src/scan/: mod.rs  qr.rs
src/drive/src/scan/model/: auth.rs  gen.rs  query.rs  suc.rs
src/qrcode/: Cargo.toml
src/qrcode/examples/: qrcode_term.rs
src/qrcode/src/: ec.rs  lib.rs  optimize.rs
src/qrcode/src/render/: mod.rs  unicode.rs
