[package]
name = "aliyundrive-cli"
version = "0.1.0"
edition = "2021"
description = "Alibaba Cloud Disk Terminal CLI Tool"
author = "<gngpp verticle@foxmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.8.4"
clap = { version = "3.2.8", features = ["derive"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
chrono = "0.4.9"
tokio = { version = "1.19.2", features = ["macros", "rt-multi-thread"] }
reqwest = { version = "0.11.10", default-features = false, features = ["json", "cookies", "gzip", "rustls-tls"] }
dirs = "4.0"
qrcode = { path = "src/qrcode" }
drive = { path = "src/drive" }

[workspace]
members = [
    "src/qrcode",
    "src/drive",
]