[package]
name = "aliyundrive-cli"
version = "0.1.0"
edition = "2021"
description = "Alibaba Cloud Disk Terminal CLI Tool"
author = "<gngpp verticle@foxmail.com>"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
anyhow = "1.0.66"
log = "0.4.17"
env_logger = "0.9.1"
clap = { version = "4.0.18", features = ["derive"] }
serde = { version = "1.0.147", features = ["derive"] }
serde_json = "1.0.87"
chrono = "0.4.22"
tokio = { version = "1.21.2", features = ["macros", "rt-multi-thread", "sync", "fs"] }
reqwest = { version = "0.11.12", default-features = false, features = ["json", "cookies", "gzip", "rustls-tls"] }
dirs = "4.0"
base64 = "0.13.1"
lazy_static = "1.4.0"
serde_yaml = "0.9.14"
qr2term = "0.3.1"