[package]
name = "conf"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
log = "0.4.0"
env_logger = "0.8.4"
serde = { version = "1.0.136", features = ["derive"] }
serde_yaml = "0.8.24"
lazy_static = "1.4.0"
anyhow = "1.0"

[lib]
name = "conf"
path = "src/lib.rs"

