[package]
name = "drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11", features = ["blocking", "json"] }
openssl = { version = "0.10", features = ["vendored"] }
serde = { version = "1.0.136", features = ["derive"] }
anyhow = "1.0"
serde_json = "1.0.79"
log = "0.4.0"
env_logger = "0.8.4"
qrcode = {path = "../qrcode"}

[[example]]
name = "json"

[[example]]
name = "err"

[lib]
name = "drive"
path = "src/lib.rs"