[package]
name = "qrcode"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html
# image future versions are not supported
[dependencies]
image = { version = "0.23", optional = true }
checked_int_cast = "1"

[features]
default = ["image", "svg", "png"]
bench = []
svg = []
png = []

[[example]]
name = "qrcode"

[lib]
name = "qrcode"
path = "src/lib.rs"