[package]
name = "qrcode_term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[badges]
travis-ci = { repository = "kennytm/qrcode-rust" }
coveralls = { repository = "kennytm/qrcode-rust" }
is-it-maintained-issue-resolution = { repository = "kennytm/qrcode-rust" }
is-it-maintained-open-issues = { repository = "kennytm/qrcode-rust" }
maintenance = { status = "passively-maintained" }

[dependencies]
image = { version = "0.23", default-features = false, optional = true }
checked_int_cast = "1"

[dev-dependencies]
image = "0.23"

[features]
default = ["image", "svg"]
bench = []
svg = []

[[example]]
name = "encode_image"
required-features = ["image"]

[[example]]
name = "encode_string"

[[example]]
name = "encode_svg"
required-features = ["svg"]


[lib]
name = "qrcode_term"
path = "src/lib.rs"