[package]
name = "qrcode_term"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
crossterm = { version = "0.23", default-features = false }
qrcode = { path = "../qrcode", default-features = true}

[dev-dependencies]
image = "0.23"

[[example]]
name = "qrcode_term"

[lib]
name = "qrcode_term"
path = "src/lib.rs"