[package]
name = "drive"
version = "0.1.0"
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[dependencies]
reqwest = { version = "0.11.10", default-features = false, features = ["json", "cookies", "gzip", "rustls-tls"] }
serde = { version = "1.0.136", features = ["derive"] }
serde_json = "1.0.79"
serde_yaml = "0.8.24"
anyhow = "1.0"
log = "0.4.0"
env_logger = "0.8.4"
base64 = "0.13.0"
chrono = "0.4.9"
lazy_static = "1.4.0"

qrcode = { path = "../qrcode" }

[lib]
name = "drive"
path = "src/lib.rs"